update css with new layout

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
-
+html, body {
+    position:fixed;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+}
 
 /*
 ALL ABOUT TYPOGRAPHY
@@ -89,19 +95,47 @@ div {
     font-size: 12px;
 }
 
+#left, #right {
+    border: 1px solid #aaa;
+    float:left;
+    height: 100vh;
+    width: 48%;
+}
+
+#handle {
+    background:#000;
+    float: left;
+    height: 100px;
+    width: 1%;
+    margin: 1px;
+}
+
 .container {
     display:grid;
+    width: 80vw;
     margin-top: 5px;
-    grid-template-columns: repeat(5, 20vw);
+    grid-template-columns: repeat(4, 20vw);
     grid-template-rows: repeat(1, 20vw);
     column-gap: 10px;
     row-gap: 15px;
 }
 
+.mainContainer{
+    display:grid;
+    grid-template-columns: 18% 82%;
+}
+
+.infoBoxLeft{
+    border: 2px solid black;
+    border-left: none;
+    border-bottom: none;
+    border-top: none;
+}
+
 .imageHex {
     height: 10vh;
-    width: 20vh;
-    border: 2px dotted palevioletred;
+    width: 20vw;
+    border: 4px solid palevioletred;
 }
 
 img{
