change button style

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,10 @@ h2 {
     }
 }
 
+button{
+    font-family: "happy-times-NG_italic_master_web", sans-serif;
+}
+
 /* ANIMATIONSSS */
 
 .scroll-container {
