--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,7 @@ h2 {
 button{
     font-family: "happy-times-NG_italic_master_web", sans-serif;
     width: 100%;
+    background-color: #ccd7bf
 }
 
 /* ANIMATIONSSS */
