--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,6 @@ button{
 .scroll-container {
     -moz-box-pack: center;
     border: 3px solid black;
-    border-radius: 5px;
     overflow: hidden;
     display: flex;
     justify-content: space-evenly;
@@ -166,7 +165,7 @@ div {
     display:grid;
     width: 80vw;
     margin-top: 5px;
-    grid-template-columns: repeat(4, 20vw);
+    grid-template-columns: repeat(4, 24%);
     grid-template-rows: repeat(1, auto);
     column-gap: 10px;
     row-gap: 0px;
@@ -175,7 +174,7 @@ div {
 .mainContainer{
     display:grid;
     height: 100%;
-    grid-template-columns: 18% 82%;
+    grid-template-columns: 20% 80%;
 }
 
 .infoBoxLeft{
@@ -191,7 +190,7 @@ div {
 
 .imageHex {
     height: 10vh;
-    width: 20vw;
+    width: 25%;
     border: 4px solid palevioletred;
 }
 
