--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,10 @@ h2 {
     font-family: "happy-times-NG_italic_master_web", sans-serif;
 }
 
+.underlined{
+    text-decoration: underline;
+}
+
 .refText{
     text-decoration: underline;
     transition: color 300ms;
