--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,16 @@ button{
     margin-bottom: 10px;
 }
 
+.buttonRandomizer {
+    position: absolute;
+    left: 90vw;
+    right: 95vw;
+    top: 5vw;
+    width: 7vw;
+    font-size: 15px;
+    font-family: "happy-times-NG_bold_master_web";
+}
+
 .overlay {
     right:0;
     left:0;
@@ -103,7 +113,7 @@ button{
 
 .rowScroll {
     border: 2px dotted black;
-    height: 100%;
+    height: 200px;
     border-left: none;
     border-bottom: none;
     border-top: none;
@@ -203,6 +213,7 @@ div {
     border: 4px dashed black;
     margin-right: 2.5px;
     padding-right: 20px;
+    padding-bottom: 200px;
     height: 90vh;
     border-left: none;
     border-bottom: none;
