--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,11 @@ ALL ABOUT TYPOGRAPHY
     src: local("happy-times-NG_italic_master_web"), url(fonts/happy-times-NG_italic_master_web.ttf);
 }
 
+@font-face {
+    font-family: "lineal";
+    src: local("lineal"), url(fonts/Lineal.otf);
+}
+
 h1 {
     font-size: 43px;
     font-family: "happy-times-NG_bold_master_web", sans-serif;
@@ -77,7 +82,7 @@ h2 {
 }
 
 .titleBoxTitle {
-    font-size: 15px;
+    font-size: 20px;
     text-align: left;
 }
 
