--- a/src/index.css
+++ b/src/index.css
@@ -267,16 +267,17 @@ div {
 .mainContainer{
     display:grid;
     height: 100%;
-    grid-template-columns: 19.5% 0.5% 80%;
+    grid-template-columns: 19.5% 0.5% 79.5% 0.5%;
+    border-right: dashed black 4px;
 }
 
 .infoBoxLeft{
     border: 4px dashed black;
     margin-right: 2.5px;
     padding-right: 20px;
+    padding-left: 20px;
     padding-bottom: 200px;
     height: 90vh;
-    border-left: none;
     border-bottom: none;
     border-top: none;
     overflow-y:auto;
