--- a/src/index.css
+++ b/src/index.css
@@ -319,10 +319,37 @@ img{
     height: 100vh;
 }
 
-.svg_container{
+.svg_container1{
     position: relative;
     z-index: -1;
-    transform: skewX(25deg) translateX(-500px);
+    opacity: 1;
+    animation: fade 10s infinite;
+    transform: skewX(29deg) translateX(-39.5%);
     height: 0vh;
     left: 0;
+}
+
+.svg_container2 {
+    position: relative;
+    z-index: -1;
+    opacity: 1;
+    animation: fade 7s infinite;
+    transform: skewX(30deg) translateX(-40%);
+    height: 0vh;
+    left: 0;
+}
+
+.svg_container3{
+    position: relative;
+    z-index: -1;
+    opacity: 1;
+    animation: fade 13s infinite;
+    transform: skewX(30deg) translateX(-40.5%);
+    height: 0vh;
+    left: 0;
+}
+
+@keyframes fade {
+    0%,100% { opacity: 0 }
+    50% { opacity: 1 }
 }
