add css for layouts.

--- a/src/index.css
+++ b/src/index.css
@@ -352,3 +352,19 @@ img{
     0%,100% { opacity: 0 }
     50% { opacity: 1 }
 }
+
+.colorPickInterface{
+    display:grid;
+    grid-template-columns: 80% 20%;
+    height: 10vh;
+    border: solid black 3px;
+}
+
+.colorPickerInterfaceList{
+    display:grid;
+    grid-template-columns: repeat(10, 10%);
+}
+
+.colorPickerInterfaceColorSQ{
+    border: solid blue 3px;
+}
