--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,10 @@ h4 {
     grid-template-columns: repeat(3, 30%);
 }
 
+.boldSet {
+    font-family: "happy-times-NG_bold_master_web", sans-serif;
+}
+
 .italic {
     -moz-transition: all 1s;
     -webkit-transition: all 1s;
@@ -111,6 +115,15 @@ h4 {
     -moz-transform: skewX(-10deg);
     -o-transform: skewX(-10deg);
     transform: skewX(-10deg);
+}
+
+.italicSet{
+    font-family: "happy-times-NG_italic_master_web", sans-serif;
+}
+
+.pinkHeader {
+    color: #FFC0CB;
+    line-height: 1px;
 }
 
 /* ---------------------------------- COLORS ---------------------------------- */
@@ -255,6 +268,18 @@ button{
     justify-content: space-evenly;
 }
 
+.scroll-container__blue__pink{
+    -moz-box-pack: center;
+    background-color: blue;
+    border-right: 3px solid black;
+    border-left: 3px solid black;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-evenly;
+    color: #FFC0CB;
+}
+
+
 .scroll-text {
     text-align: right;
     white-space: nowrap;
@@ -346,11 +371,11 @@ to {
 .infoBoxLeft{
     border: 4px dashed black;
     margin-right: 3px;
-    margin-left: 50px;
+    margin-left: 70px;
     padding-right: 20px;
     padding-left: 20px;
     padding-bottom: 200px;
-    width: 20%;
+    width: 25%;
     height: 90vh;
     border-bottom: none;
     border-top: none;
