--- a/src/index.css
+++ b/src/index.css
@@ -223,6 +223,10 @@ h4 {
     font-size: 15px;
 }
 
+.easeBorder__green{
+    border: 2px solid #afc6ae;
+}
+
 .descText {
     font-family: "happy-times-NG_regular_master_web", sans-serif;
     font-size: 15px;
@@ -286,8 +290,7 @@ button{
 }
 
 .rowScroll {
-    border: 2px none black;
-    border-right-style: dotted;
+    border: 4px none #afc6ae;
     height: 300px;
     overflow-y:auto;
     margin-top: 4px;
@@ -494,4 +497,8 @@ img{
 .colorPickerInterfaceColorSQ{
     border: solid #0066FF 3px;
     text-align: center;
+}
+
+.textBackground__green{
+    color: #afc6ae;
 }
