--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@
     --happy__italic: "happy-times-NG_italic_master_web";
 }
 
+::selection {
+    background: var(--main__green)
+}
+
+
 html, body {
     position:fixed;
     top:0;
@@ -518,4 +523,8 @@ img{
 
 .textBackground__green{
     color: #afc6ae;
+}
+
+.fluoGreen {
+    color: var(--fluo__green);
 }
